Fix sonar issue: do not use Guava import when you can use JDK methods (Usage of ImmutableList)