@@ -17,7 +17,6 @@
  */
 package io.ecocode.java.checks.environment.batch;
 
-import com.google.common.collect.ImmutableList;
 import io.ecocode.java.checks.helpers.CheckArgumentComplexTypeUtils;
 import org.sonar.check.Rule;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
@@ -47,7 +46,7 @@ public class SensorCoalesceRule extends IssuableSubscriptionVisitor {
 
     @Override
     public List<Tree.Kind> nodesToVisit() {
-        return ImmutableList.of(Tree.Kind.METHOD_INVOCATION);
+        return List.of(Tree.Kind.METHOD_INVOCATION);
     }
 
     @Override
